kubernetes/samra/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: samra
  labels:
    app.kubernetes.io/managed-by: kubectl
