kubernetes/samra/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog
  namespace: samra
  labels:
    app.kubernetes.io/name: microblog
    app.kubernetes.io/component: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-samra
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - samra-microblog.northeurope.cloudapp.azure.com
      secretName: microblog-tls
  rules:
    - host: samra-microblog.northeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog
                port:
                  number: 5000
